# pretix-smartseating

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  pretixplugin.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: ADMIN-GUIDE.md  API.md  ARCHITECTURE.md  DEVELOPER-GUIDE.md  RELEASE.md  THEME-INTEGRATION.md  example-settings.py
pretix_smartseating/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views_api.py  views_control.py
pretix_smartseating/locale/de/LC_MESSAGES/: django.po
pretix_smartseating/locale/en/LC_MESSAGES/: django.po
pretix_smartseating/migrations/: 0001_initial.py  0002_seatingtemplateasset.py
pretix_smartseating/services/: autoseat.py  availability.py  holds.py  import_export.py  validation.py
pretix_smartseating/static/pretix_smartseating/css/: editor.css
pretix_smartseating/static/pretix_smartseating/js/: editor.js  shop.js
pretix_smartseating/static/pretix_smartseating/src/: editor.ts  shop.ts
pretix_smartseating/templates/pretix_smartseating/control/: editor.html  plan_form.html  plan_import.html  plan_list.html
pretix_smartseating/templates/pretix_smartseating/shop/: seat_selector.html
pretix_smartseating/templatetags/: smartseating_tags.py
tests/: test_api.py  test_autoseat.py  test_import_export.py  test_models.py  test_validation.py
